--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "crypto-js": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1"
